# gauntlet

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.agents/skills/gauntlet/: SKILL.md
.agents/skills/repo-gauntlet/: SKILL.md
.claude/: lockdown-deny.sh
.claude-plugin/: marketplace.json  plugin.json
.coily/: coily.yaml
.github/workflows/: release.yml  version-bump-guard.yml
.ward/: ward.yaml
docs/: FEATURES.md  development.md  hardening-prompt-template.md  scope.md
gauntlet/: _log.py  _plausibility.py  executor.py  http.py  loop.py  models.py  runs.py
scripts/: release.py
tests/: test_coverage_gaps.py  test_executor.py  test_final_clearance.py  test_findings_store.py  test_gauntlet.py  test_http.py  test_loop_intelligence.py  test_loop_properties.py  test_mutator.py  test_plausibility.py  test_runs.py
